--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: Dockerfile.zephyr
           push: true
           tags: golioth-zephyr-arm:v3.4.0-0.16.1
           build-args: |
