--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -31,7 +31,7 @@ jobs:
           file: Dockerfile.zephyr
           push: true
           tags: golioth-zephyr-arm:v3.4.0-0.16.1
-          build-args: |
-            ZEPHYR_VERSION=v3.4.0
-            ZEPHYR_SDK_VERSION=0.16.1
-            ZEPHYR_SDK_TOOLCHAIN="-t x86_64-zephyr-elf"
+          # build-args: |
+          #   ZEPHYR_VERSION=v3.4.0
+          #   ZEPHYR_SDK_VERSION=0.16.1
+          #   ZEPHYR_SDK_TOOLCHAIN="-t x86_64-zephyr-elf"
