--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -30,8 +30,8 @@ jobs:
         with:
           file: Dockerfile.zephyr
           push: true
-          tags: ghcr.io/beriberikix/golioth-zephyr-arm:v3.4.0-0.16.1
-          # build-args: |
-          #   ZEPHYR_VERSION=v3.4.0
+          tags: ghcr.io/beriberikix/golioth-zephyr-arm:v3.2.0-0.16.1
+          build-args: |
+            ZEPHYR_VERSION=v3.2.0
           #   ZEPHYR_SDK_VERSION=0.16.1
           #   ZEPHYR_SDK_TOOLCHAIN="-t x86_64-zephyr-elf"
