--- a/Dockerfile.zephyr
+++ b/Dockerfile.zephyr
@@ -34,6 +34,7 @@ RUN \
   && rm ${sdk_file_name} \
   && apt-get remove -y --purge \
   wget \
+  xz-utils \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
