--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,8 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        ZEPHYR_VERSION: [0.16.1]
-        ZEPHYR_SDK_VERSION: [v3.4.0]
+        ZEPHYR_VERSION: [v3.4.0]
+        ZEPHYR_SDK_VERSION: [0.16.1]
         ZEPHYR_SDK_TOOLCHAIN: [
           { NAME: "arm", TOOLCHAINS: "-t arm-zephyr-eabi"},
           { NAME: "x86_64", TOOLCHAINS: "-t x86_64-zephyr-elf"},
