Not sure why idf.py isn't found in example, yet

--- a/Dockerfile.esp-idf
+++ b/Dockerfile.esp-idf
@@ -24,8 +24,7 @@ RUN \
 FROM base AS idf
 
 RUN \
-  mkdir esp \
-  && cd esp \
+  mkdir /opt/esp && cd /opt/esp \
   && git clone --recursive https://github.com/espressif/esp-idf.git
 
 FROM idf AS tools
@@ -34,9 +33,10 @@ ARG TARGET=esp32
 ENV TARGET=${TARGET}
 
 RUN \
-  cd /esp/esp-idf \
-  && ./install.sh esp32
+  cd /opt/esp/esp-idf \
+  && ./install.sh ${TARGET}
 
-RUN [ "chmod", "+x", "/esp/esp-idf/export.sh"  ]
-
-ENTRYPOINT [ "/esp/esp-idf/export.sh" ]
+COPY scripts/espidf-entrypoint.sh /opt/esp/entrypoint.sh
+RUN ["chmod", "+x", "/opt/esp/entrypoint.sh"]
+ENTRYPOINT [ "/opt/esp/entrypoint.sh" ]
+# CMD [ "/bin/bash" ]
