--- a/Dockerfile.zephyr
+++ b/Dockerfile.zephyr
@@ -74,5 +74,4 @@ RUN \
   RUN \
     mkdir zephyrproject && cd zephyrproject \
     && west init -l --mf west-zephyr.yml \
-    && west update --narrow -o=--depth=1 \
-    && cd modules/lib/golioth-firmware-sdk && git submodule update --init --recursive
+    && west update --narrow -o=--depth=1
